change analytics & fb events

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -10,7 +10,7 @@
   <title>Entrenamiento Online 100% Gratuito | Importa desde USA</title>
   <script defer src="/home/js/main.js"></script>
   <!-- Meta Pixel Code -->
-  <script defer>
+  <!-- <script defer>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -25,16 +25,16 @@
   </script>
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=502395617964569&ev=PageView&noscript=1"
-  /></noscript>
+  /></noscript> -->
   <!-- End Meta Pixel Code -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-221794490-9"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-221794490-9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-221794490-9');
-  </script>
+  </script> -->
 </head>
 <body>
   <main>
