--- a/public/home/index.html
+++ b/public/home/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="facebook-domain-verification" content="cxyo2fj0olp6izhj485mppoiykwib7" />
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
   <link rel="stylesheet" href="/home/assets/css/critical.min.css">
   <title>Entrenamiento Online 100% Gratuito | Importar desde USA</title>
